--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,73 +1,93 @@
-/* pages/index/index.wxss */
-.c1{
-  color: red;
+.container{
+  padding:20rpx;
 }
-
-.menu-1 image,.menu-2 image{
-  width: 100rpx;
-  height: 100rpx;
-  border-radius: 50rpx;
-}
-
-
-.menu-1{
+.category{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin: 20rpx 0;
+  font-size: 28rpx;
 }
-
-
-.menu-2{
-  display: flex;
-
-  flex-direction: row;
-  justify-content: space-around;
-
-}
-
-.menu-2 .item{
+.category .item{
   display: flex;
   flex-direction: column;
-
   align-items: center;
 }
-
-
-
-.auction .item{
-
+.category .item image{
+  width: 100rpx;
+  height: 100rpx;
+  margin-bottom: 10rpx;
 }
 
-.auction .item .title{
-  font-size: 50rpx;
-  font-weight: 600;
+.falls
+{
+    -moz-column-count:2; /* Firefox */
+    -webkit-column-count:2; /* Safari and Chrome */
+    column-count:2;
+
+    -moz-column-gap:20rpx; /* Firefox */
+    -webkit-column-gap:20rpx; /* Safari and Chrome */
+    column-gap:20rpx;
+}
+.falls .item{
+  break-inside: avoid-column;
+  -webkit-column-break-inside: avoid; /* Safari and Chrome */
 }
 
-.auction .item .tips{
+.falls .item .pic{
+  position: relative;
+}
+
+.falls .item .pic .img{
+  width: 100%;
+  display: block;
+}
+
+.falls .item .pic .user{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #333;
+  opacity: 0.6;
+  height: 60rpx;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size: 30rpx;
-  color: #8c8c8c;
-}
-.auction .item .big{
-  height: 400rpx;
-  overflow: hidden;
-}
-
-.auction .item .big image{
+  align-items: center;
   width: 100%;
-  height: 100%;
+  color: #fff;
+  font-size: 28rpx;
 }
-
-.auction .item .small{
+.falls .item .pic .user .author,.falls .item .pic .user .favor{
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  align-items: center;
+
+  padding: 0 10rpx;
 }
 
-.auction .item .small image{
-  height: 100rpx;
-  width: 100rpx;
-  padding-right: 20rpx;
+.falls .item .pic .user .author .avatar{
+  width: 28rpx;
+  height: 28rpx;
+  border-radius: 14rpx;
+  margin-right:10rpx;
+}
+
+.falls .item .pic .user .favor .icon{
+  width: 28rpx;
+  height: 28rpx;
+  margin-right:10rpx;
+}
+
+.falls .item .title{
+  border: 1rpx solid #ddd;
+  padding: 15rpx;
+  font-size: 28rpx;
+}
+
+.falls .item .title .tag{
+  font-size: 32rpx;
+  color: #00c8b6;
+  margin: 0 10rpx;
 }
